<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:elevation="10dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_mhtml"
                    >

                </ImageView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mfvpc_display_medium"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/rate_us2"
                    android:textColor="@color/tooltip_background_dark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rate_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/how_was_your_experience_with_us"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:text="@string/how_was_your_experience_with_us2"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="11">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_rate"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_rate"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_rate"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_rate"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_rate"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"></LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/remindme"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:fontFamily="@font/mfvpc_display_medium"
                    android:text="@string/later"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:textAlignment="center"
                    android:textColor="@color/tooltip_background_dark"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent">

                </LinearLayout>


                <TextView
                    android:id="@+id/rate_now"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rate_now"
                    android:fontFamily="@font/mfvpc_display_medium"
                    android:textAlignment="center"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:background="@drawable/rate_us_btn"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent">

                </LinearLayout>
                <TextView
                    android:id="@+id/never"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="@string/never"
                    android:fontFamily="@font/mfvpc_display_medium"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:textAlignment="center"
                    android:textColor="@color/tooltip_background_dark"
                    android:textSize="16sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp">

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>